list, create articulo

--- a/biblioteca/src/app/modulo/navbar/navbar.component.html
+++ b/biblioteca/src/app/modulo/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <h1 class="navbar-brand">Biblioteca</h1>
+        <a href="biblioteca" class="navbar-brand">Biblioteca</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -11,7 +11,7 @@
                     <a class="nav-link" aria-current="page" href="biblioteca/libros">Libros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Articulos</a>
+                    <a class="nav-link" href="biblioteca/articulo">Articulos</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Autores</a>
