--- a/biblioteca/src/app/modulo/articulo/articulo-list/articulo-list.component.html
+++ b/biblioteca/src/app/modulo/articulo/articulo-list/articulo-list.component.html
@@ -11,7 +11,7 @@
                     <th scope="col">ISSN</th>
                     <th scope="col">Titulo</th>
                     <th scope="col">Fecha publicacion</th>
-                    <th scope="col">publicaciÓn</th>
+                    <th scope="col">publicación</th>
                     <th scope="col">Autores</th>
                     <th scope="col">Opciones</th>
                 </tr>
