--- a/biblioteca/src/app/modulo/navbar/navbar.component.html
+++ b/biblioteca/src/app/modulo/navbar/navbar.component.html
@@ -14,7 +14,7 @@
                     <a class="nav-link" href="biblioteca/articulo">Articulos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Autores</a>
+                    <a class="nav-link" href="biblioteca/autor">Autores</a>
                 </li>
             </ul>
         </div>
